configure CORS response headers & add model register user method
