# Webtrader/run/lib/src/controller.py
@@ -42,6 +42,27 @@ def set_user_object(username):
     user_object = user_object.set_from_username()
     return user_object
 
+def create_new_user(userid, password, user_type):
+    try:
+        user_object = set_user_object(userid)
+    except:
+        return "username error"
+    hashed_pw = user_object.calculatehash(password)
+    user_object.pass_hash = hashed_pw
+    user_object.type = user_type
+    user_object.save()
+
+def create_new_user_query(userid, password, user_type):
+    try:
+        user_object = set_user_object(userid)
+    except:
+        return "username error"
+    hashed_pw = user_object.calculatehash(password)
+    user_object.pass_hash = hashed_pw
+    user_object.type = user_type
+    user_object.save()
+
+
 
 @app.route('/login', methods=['GET', 'POST'])
 def login():    
