# week8/dapp_twitter/backend/run/src/swagger.yml
@@ -58,7 +58,7 @@ paths:
       description: "Returns True for valid"
       responses:
         200:
-          description: "Successfully returned pass hash"
+          description: "Successfully validated pw"
           schema:
             type: "string"
             # items:
@@ -69,3 +69,59 @@ paths:
             #       type: "string"
             #     timestamp:
             #       type: "string"
+  /create:
+    get:
+      operationId: "model.create_new_user"
+      tags:
+        - "Create new user" 
+      parameters:
+        - in: body
+          name: user
+          description: The user to create.
+          schema:
+            type: object
+            required:
+              - userid
+              - password
+            properties:
+              userid:
+                type: "string"
+              password:
+                type: "string"
+              user_type:
+                type: "string"
+      summary: "creates new user with new pass hash, username and user type "
+      description: "Returns True for valid"
+      responses:
+        200:
+          description: "Successfully created user"
+          schema:
+            type: "string"
+  /createquery:
+    get:
+      operationId: "model.create_new_user_query"
+      tags:
+        - "Create new user" 
+      parameters:
+        - name: userid
+          in: query
+          type: string
+          description: "enter the userid so that you can get validate pw with pass hash"
+          required: true
+        - name: password
+          in: query
+          type: string
+          description: "enter the username so that you can get this users pass hash"
+          required: true
+        - name: user_type
+          in: query
+          type: string
+          description: "enter the username so that you can get this users pass hash"
+          required: true      
+      summary: "creates new user with new pass hash, username and user type "
+      description: "Returns True for valid"
+      responses:
+        200:
+          description: "Successfully created user"
+          schema:
+            type: "string"
